--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
-  "name": "NodejsTemplate",
+  "name": "looback_template",
   "version": "1.0.0",
   "main": "server/server.js",
   "scripts": {
-    "start": "node .",
-    "pretest": "jshint .",
-    "posttest": "nsp check"
+    "start": "node ."
   },
   "dependencies": {
     "compression": "^1.0.3",
+    "cookie-parser": "^1.4.3",
     "cors": "^2.5.2",
     "helmet": "^1.3.0",
     "lodash": "^4.13.1",
@@ -22,13 +21,12 @@
   },
   "devDependencies": {
     "gulp": "^3.9.1",
-    "gulp-nodemon": "^2.1.0",
-    "nsp": "^2.1.0"
+    "gulp-nodemon": "^2.1.0"
   },
   "repository": {
     "type": "",
     "url": ""
   },
   "license": "UNLICENSED",
-  "description": "NodejsTemplate"
+  "description": "looback_template"
 }
