--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "repository": {
     "type": "",
-    "url": ""
+    "url": "https://github.com/SokolovAlex/loopback_template"
   },
   "license": "UNLICENSED",
   "description": "looback_template"
